--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -1,134 +1,102 @@
-name: Deploy backend code to backend server
+name: Deploy Full Stack App to EC2 using Docker & ECR
+
 on:
-  # Activates the workflow when there is a push on the main branch,
-  # restricted to changes within the "server" directory.
- # push:
-  #  branches:
-   #   - main
-    #paths:  
-     # - 'server/**'
-  # Allows manual triggering of the workflow if needed.
+  push:
+    branches:
+      - main
+    paths:
+      - "server/**"
+      - "client/**"
   workflow_dispatch:
-     
+
 jobs:
-  deploy-backend-code-in-server:
-   # Specifies that the job will run on a self-hosted runner (EC2 instance in this case).
-    #runs-on: self-hosted
+  build-push-deploy:
     runs-on: ubuntu-latest
-   # Sets default working directory for subsequent steps to the "server" directory.
-    defaults:
-      run:
-        working-directory: ./server
+
     steps:
-     # Checks out the latest code from the repository.
-      - name: Checkout Latest Repo
-        uses: actions/checkout@v4
-     
-     # # Sets up QEMU for emulation.
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-     
-     # Sets up Docker Buildx for multi-platform builds. 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-     # Logs in to Docker Hub using Docker credentials stored in GitHub Secrets.
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-         username: ${{ secrets.DOCKERHUB_USERNAME }}
-         password: ${{ secrets.DOCKERHUB_TOKEN }}
-           
-     # Builds the Docker image from the "server" directory and pushes it to Docker Hub.
-      - name: Build and push
-        uses: docker/build-push-action@v5
-        with:
-          context: ./server/
-          push: true
-          tags: divyapatel42/ecommerce-webapp:backendGithubActions
-
-      - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@0.20.0
-        with:
-          image-ref: 'divyapatel42/ecommerce-webapp:backendGithubActions'
-          format: 'table'
-          ignore-unfixed: true
-          vuln-type: 'os,library'
-          severity: 'UNKNOWN,LOW,MEDIUM,CRITICAL,HIGH'
-          
-      # Create a file indicating the status of the deployment
-      - name: Create status file
-        run: echo "success" > deployment_status.txt 
-     
-      - name: Upload deployment status
-        uses: actions/upload-artifact@v4
-        with:
-          name: deployment-status
-          path: ./server/deployment_status.txt    
-
-
-  deploy-frontend-code-in-server:
-    runs-on: ubuntu-latest
-    needs: deploy-backend-code-in-server
-    defaults:
-      run:
-        working-directory: ./client
-    steps:
-      - name: Checkout Latest Repo
+      #  Checkout codee
+      - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Download deployment status
-        uses: actions/download-artifact@v4
+      # Configure AWS credentials
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          name: deployment-status
-          path: ./client
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-southeast-2
 
-      - name: Deploy based on status
+      # Login to Amazon ECR
+      - name: Login to Amazon ECR
+        uses: aws-actions/amazon-ecr-login@v2
+        with:
+          region: ap-southeast-2
+
+      # =======================
+      #  BACKEND PIPELINE
+      # =======================
+
+      - name: Build Backend Image
+        working-directory: React-Node-MongoDB-Docker-Project-CICD-GITHUB-ACTIONS-EC2/server
+        run: docker build -t backend-app .
+
+      - name: Tag Backend Image
         run: |
-          if [[ $(cat deployment_status.txt) == "success" ]]; then
-            echo "Deployment successful!"
-          else
-            echo "Deployment failed due to build issues."
-            exit 1  
-          fi 
+          docker tag backend-app:latest \
+          ${{ secrets.ECR_REPOSITORY }}:backend-latest
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - name: Push Backend Image to ECR
+        run: |
+          docker push ${{ secrets.ECR_REPOSITORY }}:backend-latest
+
+      # =======================
+      #  FRONTEND PIPELINE
+      # =======================
+
+      - name: Build Frontend Image
+        working-directory: React-Node-MongoDB-Docker-Project-CICD-GITHUB-ACTIONS-EC2/client
+        run: docker build -t frontend-app .
+
+      - name: Tag Frontend Image
+        run: |
+          docker tag frontend-app:latest \
+          ${{ secrets.ECR_REPOSITORY }}:frontend-latest
+
+      - name: Push Frontend Image to ECR
+        run: |
+          docker push ${{ secrets.ECR_REPOSITORY }}:frontend-latest
+
+      # =======================
+      #  DEPLOY TO EC2
+      # =======================
+
+      - name: Deploy on EC2 via SSH
+        uses: appleboy/ssh-action@v1.0.3
         with:
-          node-version: "20" 
-          
-      - run: pwd
-      - name: Cache NPM dependecies
-        uses: actions/cache@v4
-        with:
-          path: ./client/node_modules
-          key: ${{ runner.os }}-node-modules-${{ hashFiles('./client/package-lock.json') }} 
-          
-#       - run: npm install
-#       - run: npm run build
+          host: ${{ secrets.EC2_HOST }}
+          username: ubuntu
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            echo "Logging into ECR..."
+            aws ecr get-login-password --region ap-southeast-2 \
+            | docker login --username AWS --password-stdin ${{ secrets.ECR_REPOSITORY }}
 
-#       - name: rsync deployments
-#         uses: burnett01/rsync-deployments@7.0.1
-#         with:
-#           switches: -avzr --delete
-#           path: client/build/
-#           remote_path: /var/www/build/
-#           remote_host: ec2-65-0-173-69.ap-south-1.compute.amazonaws.com
-#           remote_user: ubuntu
-#           remote_key: ${{ secrets.SSH_KEY }}   
+            echo "Pulling latest images..."
+            docker pull ${{ secrets.ECR_REPOSITORY }}:backend-latest
+            docker pull ${{ secrets.ECR_REPOSITORY }}:frontend-latest
 
-# # #      Sets up SSH agent to allow SSH connections.
-#       - name: Setup SSH agent
-#         uses: webfactory/ssh-agent@v0.9.0
-#         with:
-#          ssh-private-key: ${{ secrets.SSH_KEY }}
+            echo "Stopping old containers..."
+            docker stop backend frontend || true
+            docker rm backend frontend || true
 
-# #  #    Runs SSH commands on the EC2 machine to deploy the Docker image.
-#       - name: Run SSH commands
-#         run: |
-#           ssh -o StrictHostKeyChecking=no -T ubuntu@65.0.173.69 << 'EOF'
-#           docker rmi -f divyapatel42/ecommerce-webapp:backendGithubActions 2>/dev/null
-#           docker rm -f $(docker ps -q --filter "publish=8000/tcp") 2>/dev/null
-#           docker run -d -p 8000:8000 divyapatel42/ecommerce-webapp:backendGithubActions 2>/dev/null
-#           sudo systemctl restart nginx
-#           EOF
+            echo "Starting backend container..."
+            docker run -d \
+              --name backend \
+              -p 8000:8000 \
+              ${{ secrets.ECR_REPOSITORY }}:backend-latest
+
+            echo "Starting frontend container..."
+            docker run -d \
+              --name frontend \
+              -p 3000:3000 \
+              ${{ secrets.ECR_REPOSITORY }}:frontend-latest
